# cx-laser-projector

./: .gitmodules  README.md
code/: CMakeLists.txt  app.conf
code/include/: envs.h  machy_utils.h  scene.h  socketdev.h
code/shader/: basic.frag  basic.vert
code/src/: machy_utils.cpp  main.cpp  scene.cpp  socketdev.cpp  trajectory_1_fpg_out.txt
embed/: CMakeLists.txt  Makefile  app  app.conf  main-program
embed/include/: scene.h  socketdev.h
embed/src/: main.cpp  scene.cpp  socketdev.cpp  socketdev.h
tests/: client-sim.py  main-sim.py  plot-path.py  plot-trajectories.py
tests/trajectories/: trajectory_100_fpg_out.txt
